tests/fixtures/nupm/rejected/missing-mod-nu/nupm.nuon
{
    name: broken-module
    type: module
    version: "0.1.0"
}
